[tool.poetry]
name = "atomkraft-provenance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
atomkraft = { git = "https://github.com/informalsystems/atomkraft", branch = "rano/provenance" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
